# 2DSWE

./: CMakeLists.txt
shaders/: fragment.glsl  fragment_water.glsl  vertex.glsl  vertex_water.glsl
shaders/skybox/: fragment.glsl  vertex.glsl
src/: main.c  render.c  render.h  solver.c  solver.h  texture.c  texture.h  vectormath.c  vectormath.h
