project(swe2d)

cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")


SET(OpenGL_GL_PREFERENCE "GLVND")

INCLUDE(FindPkgConfig)
INCLUDE(FindOpenGL REQUIRED)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

add_executable(${PROJECT_NAME} src/main.c)
INCLUDE_DIRECTORIES(${PROJECT_NAME} ${SDL2_INCLUDE_DIRS} ${CAIRO_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} OpenGL::OpenGL OpenGL::GLX)
